# arducam-apps

./: .gitignore  README.md
apps/: arducam_raw.cpp  meson.build
core/: rpicam_app.cpp  video_options.hpp
encoder/: arducam_encoder.cpp  arducam_encoder.hpp  meson.build
output/: output.cpp
python/: arducam_show.py  arducam_tcp.py  async_arducam_tcp.py
python/src/: async_terminal_tcp.py  terminal_tcp_interface.py  utils.py
startup_script/: arducam_startup.service  main.cpp  meson.build
